--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "accordion-js": "^3.3.4",
+    "accordionjs": "^2.1.2",
     "axios": "^1.7.2",
     "simplelightbox": "^2.14.3",
     "swiper": "^11.1.12",
